--- a/login.html
+++ b/login.html
@@ -5,109 +5,56 @@
     <meta name="viewport" content="width=1.0, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/login.css">
     <link rel="icon" href="assets/img/csmicropng.png">
 
-    <title>Casa do Microondas</title>
+    <title>Login - Casa do Microondas</title>
 </head>
 <body>
 
-    <header class="mainHeader">
-        <img id="iconHeader" src="assets/img/csmicropng.png" onclick="openURL()">
-        <div class="buttonHeader">
-            <button type="submit">Home</button>
-            <button type="submit">Page</button>
-            <button type="submit">Shop</button>
-            <button type="submit">Blog</button>
-            <button type="submit">Others</button>
-        </div>
-        <form class="formHeader">
-            <input class="searchInput" type="text" placeholder="Procure um produto..." required>
-            <button class="searchButton" type="submit"><span class="material-symbols-outlined">search</span></button>
-        </form>
-        <div class="rightBtnHeader">
-            <button class="loginHeader" type="submit"><span class="material-symbols-outlined">person</span><p>Login</p></button>
-            <button class="shopCartHeader" type="submit"><span class="material-symbols-outlined">shopping_cart</span></button>
-        </div>
-    </header>
-    <header class="sndHeader">
-        <div class="categoryNav">
-            <span class="material-symbols-outlined">sort</span><p>All Categories</p>
-        </div>
-        <div class="sndNav">
-            <div>
-                <span class="material-symbols-outlined">local_fire_department</span><p>Top Deals</p>
-            </div> 
-            <div>
-                <span class="material-symbols-outlined">flash_on</span><p>Flash Sale</p>
-            </div>
-            <div>
-                <span class="material-symbols-outlined">computer</span><p>Computers</p>
-            </div>
-            <div>
-                <span class="material-symbols-outlined">photo_camera</span><p>Cameras</p>
-            </div>  
-            <div>
-                <span class="material-symbols-outlined">desktop_windows</span><p>TV & Video</p>
-            </div>
-            <div>
-                <span class="material-symbols-outlined">headphones</span><p>Headphones</p>
-            </div>
-            <div>
-                <span class="material-symbols-outlined">phone_android</span><p>Phones</p>
-            </div>
-            <div>
-                <span class="material-symbols-outlined">watch</span><p>Watches</p>
-            </div>
-        </div>
-    </header>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form id="login-form" action="login.php" method="POST">
-          <div class="input-group">
-            <label for="username">Usuário:</label>
-            <input type="text" id="username" name="username" required>
-          </div>
-          <div class="input-group">
-            <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" required>
-          </div>
-          <button type="submit">Entrar</button>
-        </form>
-    </div>
-    <div class="footer">
-        <div class="infos">
-            <div class="contentInfo">
+    <div id="header-placeholder"></div>
 
-            </div>
+    <main>
+        <div class="login-container">
+            <h2>Login</h2>
+            <form id="login-form" action="login.php" method="POST">
+              <div class="input-group">
+                <label for="username">Usuário:</label>
+                <input type="text" id="username" name="username" required>
+              </div>
+              <div class="input-group">
+                <label for="password">Senha:</label>
+                <input type="password" id="password" name="password" required>
+              </div>
+              <button class="btn-entrar-login" type="submit">Entrar</button>
+            </form>
         </div>
-        <div class="categoriesFooter">
-            <div class="columnFooter">
+    </main>
+   
+    <div id="footer-placeholder"></div>
 
-            </div>
-        </div>
-        <div class="footnote">
-            <div class="copyright">
-                © Casa do Microondas – All Rights Reserved
-            </div>
-            <div class="iconFooter">
-                <img id="iconHeader" src="assets/img/csmicropng.png" onclick="openURL()">
-            </div>
-            <div class="currency">
-                <select name="coin" id="coinInput">
-                    <option value="valor1">Euro (EUR €)</option>
-                    <option value="valor2" selected>Real (BRL R$)</option>
-                    <option value="valor3">United States (USD $)</option>
-                </select>
-            </div>
-        </div>
-    </div>
-
+    <script src="https://kit.fontawesome.com/e17cdc3697.js" crossorigin="anonymous"></script>
     <script>
-        function openURL() {
-            window.location.href = "index.html";
+        function openURL(href) {
+            window.location.href = href;
         }
+
+        function openLink(url) {
+            window.open(url, '_blank');
+        }
+
+        function loadHTML(url, elementId) {
+        fetch(url)
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById(elementId).innerHTML = html;
+            })
+            .catch(error => console.error('Failed to load ' + url + ': ' + error));
+        }
+
+        loadHTML('header.html', 'header-placeholder');
+        loadHTML('footer.html', 'footer-placeholder');
     </script>
 
 </body>
