--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="container">
                 <div>
                     <div class="imgContainer">
-                        <img src="assets/img/micro2.png">
+                        <img src="assets/img/micro2.png" alt="imagem do produto">
                     </div>
                     <div class="titlePdt">Micro-ondas Philco Espelhado 37L</div>
                     <div class="price">R$ 529.95</div>   
@@ -35,7 +35,7 @@
             <div class="container">
                 <div>
                     <div class="imgContainer">
-                        <img src="assets/img/micro2.png">
+                        <img src="assets/img/micro2.png" alt="imagem do produto">
                     </div>
                     <div class="titlePdt">Micro-ondas Philco Espelhado 37L</div>
                     <div class="price">R$ 529.95</div>   
@@ -46,7 +46,7 @@
             <div class="container">
                 <div>
                     <div class="imgContainer">
-                        <img src="assets/img/micro2.png">
+                        <img src="assets/img/micro2.png" alt="imagem do produto">
                     </div>
                     <div class="titlePdt">Micro-ondas Philco Espelhado 37L</div>
                     <div class="price">R$ 529.95</div>   
@@ -57,7 +57,7 @@
             <div class="container">
                 <div>
                     <div class="imgContainer">
-                        <img src="assets/img/micro2.png">
+                        <img src="assets/img/micro2.png" alt="imagem do produto">
                     </div>
                     <div class="titlePdt">Micro-ondas Philco Espelhado 37L</div>
                     <div class="price">R$ 529.95</div>   
@@ -68,7 +68,7 @@
             <div class="container">
                 <div>
                     <div class="imgContainer">
-                        <img src="assets/img/micro2.png">
+                        <img src="assets/img/micro2.png" alt="imagem do produto">
                     </div>
                     <div class="titlePdt">Micro-ondas Philco Espelhado 37L</div>
                     <div class="price">R$ 529.95</div>   
@@ -84,7 +84,7 @@
             <div class="container">
                 <div>
                     <div class="imgContainer">
-                        <img src="assets/img/micro2.png">
+                        <img src="assets/img/micro2.png" alt="imagem do produto">
                     </div>
                     <div class="titlePdt">Micro-ondas Philco Espelhado 37L</div>
                     <div class="price">R$ 529.95</div>   
@@ -95,7 +95,7 @@
             <div class="container">
                 <div>
                     <div class="imgContainer">
-                        <img src="assets/img/micro2.png">
+                        <img src="assets/img/micro2.png" alt="imagem do produto">
                     </div>
                     <div class="titlePdt">Micro-ondas Philco Espelhado 37L</div>
                     <div class="price">R$ 529.95</div>   
@@ -106,7 +106,7 @@
             <div class="container">
                 <div>
                     <div class="imgContainer">
-                        <img src="assets/img/micro2.png">
+                        <img src="assets/img/micro2.png" alt="imagem do produto">
                     </div>
                     <div class="titlePdt">Micro-ondas Philco Espelhado 37L</div>
                     <div class="price">R$ 529.95</div>   
@@ -117,7 +117,7 @@
             <div class="container">
                 <div>
                     <div class="imgContainer">
-                        <img src="assets/img/micro2.png">
+                        <img src="assets/img/micro2.png" alt="imagem do produto">
                     </div>
                     <div class="titlePdt">Micro-ondas Philco Espelhado 37L</div>
                     <div class="price">R$ 529.95</div>   
@@ -128,7 +128,7 @@
             <div class="container">
                 <div>
                     <div class="imgContainer">
-                        <img src="assets/img/micro2.png">
+                        <img src="assets/img/micro2.png" alt="imagem do produto">
                     </div>
                     <div class="titlePdt">Micro-ondas Philco Espelhado 37L</div>
                     <div class="price">R$ 529.95</div>   
