--- a/sobre.html
+++ b/sobre.html
@@ -20,7 +20,7 @@
         <div class="contentSobre">
             <div class="logoSobre">
                 <div>
-                    <img src="assets/img/csmicropng.png">
+                    <img src="assets/img/csmicropng.png" alt="logo">
                     <p>CASA DO MICROONDAS</p>
                 </div>
             </div>
