--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
         <div class="contentContato">
             <div class="logoContato">
                 <div>
-                    <img src="assets/img/csmicropng.png">
+                    <img src="assets/img/csmicropng.png" alt="logo">
                     <p>CASA DO MICROONDAS</p>
                 </div>
             </div>
