links para redes sociais

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="../assets/img/csicon.png"/>
     <link rel="stylesheet" href="./index.css"/>
         
-    <title>Cs-Micro-React</title>
+    <title>Casa do Microondas</title>
   </head>
   <body>
     <div id="root"></div>
